--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ This is my first ever web development practice. I'm soo excited!
     <li>Hosting</li>
     <li>Watching Movie</li>
     <li>Gardening</li>
-    <img src="https://1drv.ms/i/c/0b7884d3e089beb6/ESI6ORJXc2xNoHqfcIqc7ZYB3RL7z4zN4-JQhZS58YmStg?e=fVjVX9" alt="Image" height="100px" width="200px">
+    <img src="https://1drv.ms/f/c/0b7884d3e089beb6/EpJuEqL5MKhLurXCYxZeH1cBPM7-yZFcmVgi7_3qVq1svA?e=mV4nbf" alt="Image" height="100px" width="200px">
     
     <li>Travelling</li>
 </ul>
