--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@ This is my first ever web development practice. I'm soo excited!
 </ul>
 <h3>Hobby</h3>
 <ul>
-    <li>Dancing</li>
+ <li>Dancing</li>
     <li>Acting</li>
     <li>Hosting</li>
     <li>Watching Movie</li>
     <li>Gardening</li>
-    <img src="https://1drv.ms/f/c/0b7884d3e089beb6/EpJuEqL5MKhLurXCYxZeH1cBPM7-yZFcmVgi7_3qVq1svA?e=mV4nbf" alt="Image" height="100px" width="200px">
+    <img src="Image.jpg1/photo1712309996 (3).jpeg" alt="Image" height="50px" width="100px">
     
     <li>Travelling</li>
+    
+    <img src="https://tse2.mm.bing.net/th?id=OIP.B8u7c37kE5ZdM5ZCRm-4hwHaFF&pid=Api&P=0&h=220" alt="google" height="50px" width="100px">
 </ul>
 <h3>link</h3>
 <ul>
